--- a/packages/components/src/styles/internal/_custom-elements.scss
+++ b/packages/components/src/styles/internal/_custom-elements.scss
@@ -1,20 +1,23 @@
 $custom-elements: //hygen-insert
-db-navigation-item-group,
 
-db-control-panel-secondary-actions,
-
-db-control-panel-primary-actions,
-
-db-control-panel-meta-navigation,
-
-db-control-panel-mobile,
-
-
-	db-custom-select-list-item, db-custom-select-list,
+	db-navigation-item-group, db-control-panel-secondary-actions,
+	db-control-panel-primary-actions, db-control-panel-meta-navigation,
+	db-control-panel-mobile, db-custom-select-list-item, db-custom-select-list,
 	db-custom-select-dropdown, db-custom-select-form-field, db-custom-select,
 	db-stack, db-switch, db-tab-panel, db-tabs, db-tab-list, db-tab-item,
 	db-tab-bar, db-tooltip, db-popover, db-textarea, db-navigation,
 	db-accordion-item, db-accordion, db-badge, db-navigation-item, db-tag,
-	db-radio, db-select, db-notification, db-control-panel-brand, db-button, db-card,
-	db-checkbox, db-divider, db-drawer, db-control-panel-desktop, db-icon, db-infotext,
-	db-input, db-link, db-shell, db-section, db-tab;
+	db-radio, db-select, db-notification, db-control-panel-brand, db-button,
+	db-card, db-checkbox, db-divider, db-drawer, db-control-panel-desktop,
+	db-icon, db-infotext, db-input, db-link, db-shell, db-section, db-tab;
+
+$control-panel-desktop: "> .db-control-panel-desktop, db-control-panel-desktop > .db-control-panel-desktop";
+$control-panel-mobile: "> .db-control-panel-mobile, db-control-panel-mobile > .db-control-panel-mobile";
+$control-panel-brand: "> .db-control-panel-brand, db-control-panel-brand > .db-control-panel-brand";
+$control-primary-actions: "> .db-control-panel-primary-actions, db-control-panel-primary-actions > .db-control-panel-primary-actions";
+$control-secondary-actions: "> .db-control-panel-secondary-actions, db-control-panel-secondary-actions > .db-control-panel-secondary-actions";
+$control-meta-navigation: "> .db-control-panel-meta-navigation, db-control-panel-meta-navigation > .db-control-panel-meta-navigation";
+$navigation: "db-navigation > .db-navigation, > .db-navigation";
+$navigation-item: "db-navigation-item > .db-navigation-item, > .db-navigation-item";
+$navigation-item-group: "db-navigation-item-group > .db-navigation-item-group, > .db-navigation-item-group";
+$drawer: "db-drawer > .db-drawer, > .db-drawer";
