--- a/packages/components/src/styles/internal/_navigation-item.scss
+++ b/packages/components/src/styles/internal/_navigation-item.scss
@@ -1,16 +1,18 @@
+@use "sass:string";
 @use "@db-ux/core-foundations/build/styles/variables";
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "@db-ux/core-foundations/build/styles/fonts";
 @use "@db-ux/core-foundations/build/styles/helpers";
 @use "@db-ux/core-foundations/build/styles/icons";
+@use "../../styles/internal/custom-elements";
 @use "../../styles/internal/icon-passing";
 @use "../../styles/internal/component";
 
 $navigation-max-inline-size: 328px; // We should get this value from UX
 
 @mixin direct-navigation-items {
-	> .db-navigation-item,
-	> .db-navigation-item-group {
+	#{string.unquote(custom-elements.$navigation-item)},
+	#{string.unquote(custom-elements.$navigation-item-group)} {
 		@content;
 	}
 }
@@ -53,7 +55,6 @@ $navigation-max-inline-size: 328px; // We should get this value from UX
 }
 
 %navigation-item-interactive-element {
-	@extend %default-interactive-component;
 	@extend %transparent-border;
 	@extend %db-overwrite-font-size-md;
 
