fix: issue with popover & tooltip using it in pure html css

--- a/packages/components/src/components/popover/popover.scss
+++ b/packages/components/src/components/popover/popover.scss
@@ -5,6 +5,8 @@
 .db-popover {
 	position: relative;
 	display: flex;
+	block-size: fit-content;
+	inline-size: fit-content;
 
 	&:is([data-e2e-hover="true"], :hover, :focus-within) {
 		> article:not([data-open="false"]) {
