--- a/packages/components/src/styles/internal/_popover-component.scss
+++ b/packages/components/src/styles/internal/_popover-component.scss
@@ -4,6 +4,10 @@
 @use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "component";
 
+$popover-gap-size: var(--db-popover-distance);
+$popover-inset: calc(100% + #{$popover-gap-size} * var(--db-popover-gap, 0));
+$popover-gap-inset: calc(-1 * #{$popover-gap-size});
+
 %popover-center {
 	&:not([data-placement], [data-corrected-placement]),
 	&[data-placement="bottom"]:not([data-corrected-placement]),
@@ -78,6 +82,76 @@
 
 	&:is(.db-tooltip) {
 		--db-popover-distance: #{variables.$db-spacing-fixed-sm};
+	}
+
+	/* This is for pure html css without using JS */
+	&:not([data-corrected-placement]) {
+		&[data-placement^="bottom"],
+		&[data-placement^="top"] {
+			&[data-placement$="end"] {
+				inset-inline-end: 0;
+			}
+
+			&[data-placement$="start"] {
+				inset-inline-start: 0;
+			}
+		}
+
+		&[data-placement^="left"],
+		&[data-placement^="right"] {
+			&[data-placement$="end"] {
+				inset-block-end: 0;
+			}
+
+			&[data-placement$="start"] {
+				inset-block-start: 0;
+			}
+		}
+
+		&:not([data-placement]),
+		&[data-placement^="bottom"] {
+			inset-block-start: $popover-inset;
+
+			&::before {
+				inset-inline-start: 0;
+				inline-size: 100%;
+				block-size: $popover-gap-size;
+				inset-block-start: $popover-gap-inset;
+			}
+		}
+
+		&[data-placement^="top"] {
+			inset-block-end: $popover-inset;
+
+			&::before {
+				inset-inline-end: 0;
+				inline-size: 100%;
+				block-size: $popover-gap-size;
+				inset-block-end: $popover-gap-inset;
+			}
+		}
+
+		&[data-placement^="left"] {
+			inset-inline-end: $popover-inset;
+
+			&::before {
+				inset-block-end: 0;
+				block-size: 100%;
+				inline-size: $popover-gap-size;
+				inset-inline-end: $popover-gap-inset;
+			}
+		}
+
+		&[data-placement^="right"] {
+			inset-inline-start: $popover-inset;
+
+			&::before {
+				inset-block-start: 0;
+				block-size: 100%;
+				inline-size: $popover-gap-size;
+				inset-inline-start: $popover-gap-inset;
+			}
+		}
 	}
 }
 
