--- a/packages/components/src/components/select/select.scss
+++ b/packages/components/src/components/select/select.scss
@@ -41,4 +41,41 @@
 			display: none;
 		}
 	}
+
+	// enable customized styling
+	@supports (appearance: base-select) {
+		select,
+		/* stylelint-disable-next-line selector-pseudo-element-no-unknown */
+		::picker(select) {
+			/* stylelint-disable-next-line declaration-property-value-no-unknown */
+			appearance: base-select;
+		}
+
+		/* stylelint-disable-next-line selector-pseudo-element-no-unknown */
+		&::picker-icon {
+			display: none;
+		}
+
+		/* stylelint-disable-next-line selector-pseudo-element-no-unknown */
+		::picker(select) {
+			@extend %default-card;
+		}
+
+		option {
+			justify-content: space-between;
+			// change order of the included text and pseudo-element within this flexbox item, to make sure the icon is always on the right
+			flex-direction: row-reverse;
+
+			&:checked {
+				font-weight: 700;
+			}
+
+			/* stylelint-disable-next-line selector-pseudo-element-no-unknown */
+			&::checkmark {
+				@extend %icon;
+
+				@include icons.icon-content("check");
+			}
+		}
+	}
 }
