feat(css): added logical overflow properties

--- a/packages/components/src/components/custom-select-list/custom-select-list.scss
+++ b/packages/components/src/components/custom-select-list/custom-select-list.scss
@@ -5,6 +5,7 @@
 	all: unset;
 	padding: variables.$db-spacing-fixed-sm;
 	overflow-y: auto;
+	overflow-block: auto;
 
 	&::-webkit-scrollbar-button:single-button:vertical:decrement {
 		border-start-end-radius: 0;
