--- a/packages/components/src/components/drawer/drawer.scss
+++ b/packages/components/src/components/drawer/drawer.scss
@@ -100,6 +100,7 @@ $spacings: (
 		);
 		// TODO: Evaluate whether we need overflow: hidden and that for only specifically set y here.
 		overflow-y: auto;
+		overflow-block: auto;
 	}
 }
 
