--- a/showcases/patternhub/styles/globals.scss
+++ b/showcases/patternhub/styles/globals.scss
@@ -553,6 +553,7 @@ h6 {
 .breadcrumb-container {
 	display: flex;
 	overflow-x: auto;
+	overflow-inline: auto;
 	align-content: center;
 	align-items: center;
 	padding-block: variables.$db-spacing-fixed-sm;
