--- a/showcases/showcase-styles.css
+++ b/showcases/showcase-styles.css
@@ -138,6 +138,7 @@ db-card:is(.variants-card) > .db-card {
 
 .db-page.fixed-header-footer main {
 	overflow-x: hidden;
+	overflow-inline: hidden;
 }
 
 :root:has(.db-page) {
