--- a/showcases/angular-showcase/src/app/app.component.html
+++ b/showcases/angular-showcase/src/app/app.component.html
@@ -10,19 +10,23 @@
 		[controlPanelMobilePosition]="settings.controlPanelMobilePosition"
 		[subNavigationDesktopPosition]="settings.subNavigationDesktopPosition"
 		[subNavigationMobilePosition]="settings.subNavigationMobilePosition"
+		[className]="
+			settings.subNavigation === 'true'
+				? undefined
+				: 'hide-sub-navigation'
+		"
 	>
-		@if (settings.subNavigation === "true") {
-			<db-navigation
-				sub-navigation
-				slot="subNavigation"
-				aria-label="sub-navigation"
-				[variant]="settings.subNavigationVariant"
-			>
-				@for (item of navigationItems; track item.label) {
-					<app-nav-item [navItem]="item"> </app-nav-item>
-				}
-			</db-navigation>
-		}
+		<db-navigation
+			sub-navigation
+			slot="subNavigation"
+			aria-label="sub-navigation"
+			[variant]="settings.subNavigationVariant"
+		>
+			@for (item of navigationItems; track item.label) {
+				<app-nav-item [navItem]="item"> </app-nav-item>
+			}
+		</db-navigation>
+
 		<db-control-panel-desktop
 			control-panel-desktop
 			slot="controlPanelDesktop"
