--- a/packages/components/src/components/navigation-item-group/navigation-item-group-menu-popover.scss
+++ b/packages/components/src/components/navigation-item-group/navigation-item-group-menu-popover.scss
@@ -8,6 +8,8 @@
 $outside-position: calc(-200% + #{variables.$db-spacing-fixed-xs});
 
 %db-navigation-item-group-menu-popover {
+	--db-popover-distance: #{variables.$db-spacing-fixed-xs};
+
 	@extend %component-border;
 
 	margin: 0;
@@ -33,7 +35,9 @@ $outside-position: calc(-200% + #{variables.$db-spacing-fixed-xs});
 
 	// Mobile
 	@include screen-sizes.screen("md", "max") {
+		--db-navigation-item-group-menu-mobile: 1;
 		padding: variables.$db-spacing-fixed-md;
+		border: 0;
 		inline-size: 100%;
 		position: fixed;
 		overflow: hidden auto;
@@ -49,6 +53,8 @@ $outside-position: calc(-200% + #{variables.$db-spacing-fixed-xs});
 		border-radius: variables.$db-border-radius-sm;
 		box-shadow: variables.$db-elevation-md;
 		padding: variables.$db-spacing-fixed-sm;
+		block-size: fit-content;
+		inline-size: fit-content;
 		position: absolute;
 		min-inline-size: navigation-item.$navigation-max-inline-size;
 		// TODO: This causes some flash for angular navigation item group
