--- a/packages/components/src/components/navigation-item-group/navigation-item-group-menu-tree.scss
+++ b/packages/components/src/components/navigation-item-group/navigation-item-group-menu-tree.scss
@@ -1,6 +1,7 @@
 @use "@db-ux/core-foundations/build/styles/variables";
 @use "@db-ux/core-foundations/build/styles/animation";
 @use "@db-ux/core-foundations/build/styles/colors";
+@use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "../../styles/internal/component";
 @use "../../styles/internal/form-components";
 @use "../../styles/internal/navigation-item";
@@ -27,5 +28,10 @@
 
 	.db-navigation-item-group-back-button {
 		display: none;
+	}
+
+	// Mobile
+	@include screen-sizes.screen("md", "max") {
+		--db-navigation-item-group-menu-mobile: 1;
 	}
 }
