--- a/packages/components/src/components/shell/shell-desktop.scss
+++ b/packages/components/src/components/shell/shell-desktop.scss
@@ -36,8 +36,6 @@
 					--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-md};
 
 					> menu {
-						--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-md};
-
 						padding-block: variables.$db-spacing-fixed-md;
 					}
 				}
@@ -60,8 +58,6 @@
 						--db-overflow-scroll-button-inset-block: #{variables.$db-spacing-fixed-xs};
 
 						> menu {
-							--db-navigation-item-group-menu-inset-block-start: #{variables.$db-spacing-fixed-xs};
-
 							padding-block: variables.$db-spacing-fixed-xs;
 						}
 					}
@@ -124,7 +120,8 @@
 
 				@media screen and (prefers-reduced-motion: no-preference) {
 					.db-button::before {
-						transition: transform #{variables.$db-transition-straight-functional};
+						transition: transform
+							#{variables.$db-transition-straight-functional};
 					}
 				}
 			}
