--- a/packages/components/src/styles/internal/_control-panel-desktop.scss
+++ b/packages/components/src/styles/internal/_control-panel-desktop.scss
@@ -80,7 +80,7 @@ $meta-child-selector: "> .db-control-panel-desktop-scroll-container  .db-control
 				inset-block-start: calc(
 					100% +
 						var(
-							--db-navigation-item-group-menu-inset-block-start,
+							--db-popover-distance,
 							#{variables.$db-spacing-fixed-md}
 						)
 				);
@@ -108,8 +108,8 @@ $meta-child-selector: "> .db-control-panel-desktop-scroll-container  .db-control
 @mixin vertical-navigation {
 	padding-block: variables.$db-spacing-fixed-md;
 
-	> .overflow-scroll-left-button,
-	> .overflow-scroll-right-button {
+	#{string.unquote(custom-elements.$overflow-scroll-left-button)},
+	#{string.unquote(custom-elements.$overflow-scroll-right-button)} {
 		display: none;
 	}
 
@@ -119,7 +119,7 @@ $meta-child-selector: "> .db-control-panel-desktop-scroll-container  .db-control
 			.db-navigation-item-group {
 				.db-navigation-item-group-menu {
 					inset-inline-start: calc(
-						100% + #{variables.$db-spacing-fixed-md}
+						100% + #{variables.$db-spacing-fixed-xs}
 					);
 
 					@include navigation-item.navigation-item-group-menu-triangle-vertical;
