--- a/packages/components/src/styles/internal/_db-puls.scss
+++ b/packages/components/src/styles/internal/_db-puls.scss
@@ -2,13 +2,34 @@
 @use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "@db-ux/core-foundations/build/styles/colors";
 
+$puls-background: linear-gradient(
+	135deg,
+	var(--db-pride-red, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		16.7%,
+	var(--db-pride-orange, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		0,
+	var(--db-pride-orange, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		33.4%,
+	var(--db-pride-yellow, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		0,
+	var(--db-pride-yellow, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		50.1%,
+	var(--db-pride-green, #{colors.$db-brand-on-bg-basic-emphasis-70-default}) 0,
+	var(--db-pride-green, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		66.8%,
+	var(--db-pride-blue, #{colors.$db-brand-on-bg-basic-emphasis-70-default}) 0,
+	var(--db-pride-blue, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		83.5%,
+	var(--db-pride-violet, #{colors.$db-brand-on-bg-basic-emphasis-70-default})
+		0
+);
+
 @mixin set-db-puls-horizontal() {
 	&::after {
 		block-size: variables.$db-border-width-xs;
 		inline-size: 0;
 		transform: translate(-50%, 0);
 		inset-inline-start: 50%;
-		background-color: colors.$db-brand-on-bg-basic-emphasis-70-default;
 		inset-block: auto calc(-1 * #{variables.$db-spacing-fixed-xs});
 	}
 }
@@ -19,7 +40,6 @@
 		inline-size: variables.$db-border-width-xs;
 		transform: translate(0, -50%);
 		inset-block: var(--db-puls-vertical-inset-block-start, 50%) auto;
-		background-color: colors.$db-brand-on-bg-basic-emphasis-70-default;
 		inset-inline-start: calc(-1 * #{variables.$db-spacing-fixed-xs});
 	}
 }
@@ -29,6 +49,7 @@
 		content: "";
 		position: absolute;
 		border-radius: variables.$db-border-radius-xs;
+		background: $puls-background;
 
 		@media screen and (prefers-reduced-motion: no-preference) {
 			transition:
