--- a/packages/foundations/scss/defaults/default-required.scss
+++ b/packages/foundations/scss/defaults/default-required.scss
@@ -40,6 +40,15 @@ html:not(:has(> head > meta[name="color-scheme"])) {
 	color-scheme: dark;
 }
 
+[data-pride="true"] {
+	--db-pride-red: #{colors.$db-red-origin-default};
+	--db-pride-orange: #{colors.$db-orange-origin-default};
+	--db-pride-yellow: #{colors.$db-yellow-origin-default};
+	--db-pride-green: #{colors.$db-light-green-origin-default};
+	--db-pride-blue: #{colors.$db-blue-origin-default};
+	--db-pride-violet: #{colors.$db-violet-origin-default};
+}
+
 // *! this is an opionionated (especially based on "enhancing" normalize.css) version of minireset.css v0.0.4 | MIT License | github.com/jgthms/minireset.css
 html,
 body {
