--- a/packages/foundations/tailwind/theme/index.css
+++ b/packages/foundations/tailwind/theme/index.css
@@ -1,9 +1,9 @@
-/* stylelint-disable custom-property-pattern, custom-property-empty-line-before, scss/at-rule-no-unknown */
+/* stylelint-disable custom-property-pattern, custom-property-empty-line-before, import-notation, scss/at-rule-no-unknown */
 
 /* The prefix for variables are predefined by Tailwind, stylelint would throw an error */
-@import url("colors.css");
-@import url("revert-theme.css");
-@import url("dimensions.css");
+@import "./colors.css";
+@import "./revert-theme.css";
+@import "./dimensions.css";
 
 @utility text-body-3xs {
 	font: var(--db-type-body-3xs);
