refactor: removed to a duplicate declaration

--- a/packages/components/src/components/custom-select-list/custom-select-list.scss
+++ b/packages/components/src/components/custom-select-list/custom-select-list.scss
@@ -4,6 +4,7 @@
 .db-custom-select-list {
 	all: unset;
 	padding: variables.$db-spacing-fixed-sm;
+	overflow-y: auto;
 	overflow-block: auto;
 
 	&::-webkit-scrollbar-button:single-button:vertical:decrement {
