--- a/packages/components/src/components/textarea/textarea.scss
+++ b/packages/components/src/components/textarea/textarea.scss
@@ -51,6 +51,7 @@
 		@extend %resize-textarea;
 		@extend %scrollbar;
 
+		overflow-y: scroll;
 		overflow-block: scroll;
 
 		// we don't have icons in textarea so we can overwrite it here
