--- a/showcases/angular-showcase/src/app/components/custom-select/custom-select.component.html
+++ b/showcases/angular-showcase/src/app/components/custom-select/custom-select.component.html
@@ -56,6 +56,9 @@
 				"
 				[selectedType]="exampleProps?.selectedType"
 				[formFieldWidth]="exampleProps?.formFieldWidth"
+				[invalidMessage]="exampleProps?.invalidMessage"
+				[validMessage]="exampleProps?.validMessage"
+				[validation]="exampleProps?.validation"
 				(optionSelected)="console.log($event)"
 			></db-custom-select>
 		}
