--- a/showcases/angular-showcase/src/app/components/control-panel-desktop/control-panel-desktop.component.html
+++ b/showcases/angular-showcase/src/app/components/control-panel-desktop/control-panel-desktop.component.html
@@ -21,7 +21,7 @@
 					<db-navigation-item icon="x_placeholder">
 						<a href="#">{{ exampleName }} </a>
 					</db-navigation-item>
-					<db-navigation-item [disabled]="true">
+					<db-navigation-item icon="x_placeholder" [disabled]="true">
 						<a href="#">{{ exampleName }} disabled </a>
 					</db-navigation-item>
 				</db-navigation>
