--- a/packages/foundations/scss/defaults/default-code.scss
+++ b/packages/foundations/scss/defaults/default-code.scss
@@ -4,12 +4,16 @@
 @use "../variables";
 @use "../helpers";
 
-pre:not([class]):has(code),
-pre:not([class]) code {
+pre:not([class]):has(code) {
 	background-color: colors.$db-adaptive-bg-inverted-contrast-max-default;
 	color: colors.$db-adaptive-on-bg-inverted-default;
 	padding: variables.$db-spacing-fixed-xs;
-	font-family: monospace;
+
+	&,
+	code,
+	span {
+		font-family: monospace;
+	}
 }
 
 a:has(code:not([class])) {
@@ -34,7 +38,11 @@ code:not([class]) {
 	color: colors.$db-adaptive-on-bg-inverted-default;
 	padding-block: variables.$db-spacing-fixed-3xs;
 	padding-inline: variables.$db-spacing-fixed-2xs;
-	font-family: monospace;
+
+	&,
+	span {
+		font-family: monospace;
+	}
 }
 
 blockquote:not([class]) {
