docs(patternhub): use monospace font-family for code styling (#4365)
* docs(patternhub): use monospace font-family for code styling

Relates to #4221

* chore: update monospace font family for code

* auto update snapshots (#4431)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* fix: issue with wrong patternhub snapshots

* auto update snapshots (#4440)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

---------

Co-authored-by: Nicolas Merget <nicolas.merget@deutschebahn.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Nicolas Merget <104347736+nmerget@users.noreply.github.com>
Co-authored-by: Maximilian Franzke <787658+mfranzke@users.noreply.github.com>

--- a/packages/foundations/scss/defaults/default-code.scss
+++ b/packages/foundations/scss/defaults/default-code.scss
@@ -8,7 +8,12 @@ pre:not([class]):has(code) {
 	background-color: colors.$db-adaptive-bg-inverted-contrast-max-default;
 	color: colors.$db-adaptive-on-bg-inverted-default;
 	padding: variables.$db-spacing-fixed-xs;
-	font-family: monospace;
+
+	&,
+	code,
+	span {
+		font-family: monospace;
+	}
 }
 
 a:has(code:not([class])) {
@@ -33,7 +38,11 @@ code:not([class]) {
 	color: colors.$db-adaptive-on-bg-inverted-default;
 	padding-block: variables.$db-spacing-fixed-3xs;
 	padding-inline: variables.$db-spacing-fixed-2xs;
-	font-family: monospace;
+
+	&,
+	span {
+		font-family: monospace;
+	}
 }
 
 blockquote:not([class]) {
