--- a/packages/components/src/components/select/index.html
+++ b/packages/components/src/components/select/index.html
@@ -9,7 +9,7 @@
 		<div class="db-select">
 			<label for="test1">Label</label>
 			<select id="test1" aria-describedby="db-infotext-01">
-				<option hidden></option>
+				<option class="placeholder" value=""></option>
 				<option value="test1">Test1</option>
 				<option value="test2">Test2</option>
 			</select>
@@ -18,7 +18,7 @@
 		<div class="db-select">
 			<label for="test2">Label</label>
 			<select id="test2" aria-describedby="db-infotext-02">
-				<option hidden></option>
+				<option class="placeholder" value=""></option>
 				<option value="test1">Test1</option>
 				<option value="test2">Test2</option>
 			</select>
