--- a/packages/components/src/styles/dialog-init.scss
+++ b/packages/components/src/styles/dialog-init.scss
@@ -11,12 +11,6 @@ $backdrop-color-weak: color(
 		#{variables.$db-opacity-sm}
 );
 
-%dialog-container {
-	position: fixed;
-	inset: 0;
-	z-index: 9995;
-}
-
 dialog {
 	padding: 0;
 	margin: 0;
@@ -24,17 +18,21 @@ dialog {
 	z-index: 9996;
 	color: inherit;
 
-	&[data-variant],
-	&[data-backdrop] {
-		@extend %dialog-container;
-	}
+	&:not([data-position="absolute"]) {
+		&[data-variant],
+		&[data-backdrop] {
+			position: fixed;
+			inset: 0;
+			z-index: 9995;
+		}
 
-	&[data-variant="inside"] {
-		&:not([data-backdrop="none"]) {
-			&::before {
-				content: "";
-				position: fixed;
-				inset: 0;
+		&[data-variant="inside"] {
+			&:not([data-backdrop="none"]) {
+				&::before {
+					content: "";
+					position: fixed;
+					inset: 0;
+				}
 			}
 		}
 	}
