--- a/packages/components/src/components/tag/tag.scss
+++ b/packages/components/src/components/tag/tag.scss
@@ -82,11 +82,11 @@
 	}
 
 	> :is(
-			[class="db-checkbox"],
-			[class="db-radio"],
-			[class="db-link"],
-			[class="db-button"]
-		) {
+		[class="db-checkbox"],
+		[class="db-radio"],
+		[class="db-link"],
+		[class="db-button"]
+	) {
 		block-size: 100%;
 	}
 }
@@ -147,7 +147,7 @@
 			aspect-ratio: unset;
 
 			&:checked {
-				&:not([data-hide-icon-before="true"]) {
+				&:not([data-hide-icon-leading="true"]) {
 					&::before {
 						content: none;
 					}
