--- a/packages/foundations/scss/defaults/default-icons.scss
+++ b/packages/foundations/scss/defaults/default-icons.scss
@@ -1,8 +1,8 @@
 @use "../icons";
 
 [data-icon],
-[data-icon-before],
-[data-icon-after] {
+[data-icon-leading],
+[data-icon-trailing] {
 	&:is(span) {
 		display: inline-flex;
 		vertical-align: baseline;
@@ -10,7 +10,7 @@
 }
 
 [data-icon],
-[data-icon-before] {
+[data-icon-leading] {
 	&::before {
 		@extend %icon !optional;
 
@@ -19,15 +19,15 @@
 }
 
 [data-hide-icon="true"],
-[data-hide-icon-before="true"],
+[data-hide-icon-leading="true"],
 [data-icon="none"],
-[data-icon-before="none"] {
+[data-icon-leading="none"] {
 	&::before {
 		content: none;
 	}
 }
 
-[data-icon-after] {
+[data-icon-trailing] {
 	&::after {
 		@extend %icon !optional;
 
@@ -37,8 +37,8 @@
 	}
 }
 
-[data-hide-icon-after="true"],
-[data-icon-after="none"] {
+[data-hide-icon-trailing="true"],
+[data-icon-trailing="none"] {
 	&::after {
 		content: none;
 	}
@@ -47,11 +47,11 @@
 // Providing a mechanism for text replacements
 .is-icon-text-replace {
 	&[data-icon],
-	&[data-icon-before] {
+	&[data-icon-leading] {
 		@include icons.is-icon-text-replace();
 	}
 
-	&[data-icon-after] {
+	&[data-icon-trailing] {
 		@include icons.is-icon-text-replace("after");
 	}
 }
