--- a/showcases/angular-showcase/src/app/components/input/input.component.html
+++ b/showcases/angular-showcase/src/app/components/input/input.component.html
@@ -24,7 +24,8 @@
 			[disabled]="exampleProps?.disabled"
 			[value]="exampleProps?.value"
 			[icon]="exampleProps?.icon"
-			[iconAfter]="exampleProps?.iconAfter"
+			[iconTrailing]="exampleProps?.iconTrailing"
+			[showIconTrailing]="exampleProps?.showIconTrailing"
 			[readOnly]="exampleProps?.readOnly"
 			[showLabel]="exampleProps?.showLabel"
 			[showMessage]="exampleProps?.showMessage"
