--- a/showcases/angular-showcase/src/app/components/switch/switch.component.html
+++ b/showcases/angular-showcase/src/app/components/switch/switch.component.html
@@ -19,7 +19,7 @@
 			[size]="exampleProps?.size"
 			[emphasis]="exampleProps?.emphasis"
 			[icon]="exampleProps?.icon"
-			[iconAfter]="exampleProps?.iconAfter"
+			[iconTrailing]="exampleProps?.iconTrailing"
 			[validation]="exampleProps?.validation"
 		>
 			{{ exampleName }}
